--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ docutils       == 0.16
 gevent         == 21.1.2
 greenlet       == 1.0.0
 jsonpickle     == 1.5.1
+markupsafe     == 2.0.1
 numpy          == 1.20.0
 Werkzeug       == 1.0.1
 
